# diabetesPre

./: .gitignore  Makefile  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt  test_logs.json
src/: MLtrain.py  config.py  main.py  proData.py  run_test.py  test_data.py  test_plots.py  test_testing.py
